# weave-hack

./: .env.example  .gitignore  Luma description.md  PERSONALIZATION.md  PROJECT_CONTEXT_README.md  README.md  SPEC_MODE_PROMPT.md  agent_service.py  control_plane_service.py  controller_service.py  requirements.txt  setup_brev.sh  smoke_compose_subtract.py  smoke_style_plus_tool.py  start_all.sh  verify_control_plane.py  verify_orchestrator.py  verify_risks.py  verify_service.py
agents/: __init__.py  adapters.py  brain.py  cp.py  grounding.py  loop.py  orchestrator.py  teacher.py  test_grounding.py  test_http.py  test_orchestrator.py  (+5 more)
ml/: README.md  pyproject.toml
ml/scripts/: __init__.py  _tune_gates.py  consolidate.py  prepare_demo.py  run_weave_eval.py
ml/tests/: conftest.py  test_adapter_file.py  test_batch_graph.py  test_curation.py  test_data_pipeline.py  test_eval_results.py  test_inference_api.py  test_inference_api_service.py  test_integration_demo.py  test_integration_governance.py  test_integration_wiring.py  test_serving_engine.py  test_track_b_standalone.py  test_train_adapter.py  test_train_adapter_errors.py  test_training_pair.py  test_weave_eval.py
ml/wandb/run-20260606_215659-h7onet6c/: run-h7onet6c.wandb
ml/wandb/run-20260606_215659-h7onet6c/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
ml/wandb/run-20260606_215659-h7onet6c/files/media/table/: confusion_matrix_4_5565a6e07fa7a3f49a14.table.json
ml/weaveself/: __init__.py
ml/weaveself/consolidation/: __init__.py  consolidate.py
ml/weaveself/contracts/: __init__.py  adapter_file.py  errors.py  eval_results.py  inference_api.py  training_pair.py
ml/weaveself/data/: __init__.py  curation.py  pipeline.py
ml/weaveself/eval/: __init__.py  weave_eval.py  weave_logger.py
ml/weaveself/integration/: __init__.py  demo.py  governance.py  redis_client.py  wiring.py
ml/weaveself/orchestration/: __init__.py  batch_graph.py  mocks.py  state.py
ml/weaveself/serving/: __init__.py  __main__.py  api.py  backend.py  engine.py  errors.py  server.py
ml/weaveself/training/: __init__.py  errors.py  nkt_trainer.py  trainer.py
(+140 files in other folders)
